--- a/style.css
+++ b/style.css
@@ -113,6 +113,9 @@ nav a:hover {
   color: green;
   font-weight: bold;
 }
+.chapter-title {
+  margin-top: 50px;
+}
 .citation {
   font-style: italic;
 }
